--- a/app/templates/assignments/review_submission.html
+++ b/app/templates/assignments/review_submission.html
@@ -29,7 +29,7 @@
             <div class="card shadow mb-4">
                 <div class="card-header py-3 d-flex justify-content-between align-items-center">
                     <h6 class="m-0 font-weight-bold text-primary">学生作答图片</h6>
-                    <a href="https://7sref.com/assignments/submission/{{ submission.id }}/manual_annotate" class="btn btn-sm btn-outline-primary">手动圈画</a>
+                    <a href="{{ url_for('assignments.manual_annotate', submission_id=submission.id) }}" class="btn btn-sm btn-outline-primary">手动圈画</a>
                 </div>
                 <div class="card-body text-center">
                     <a href="#" data-bs-toggle="modal" data-bs-target="#imageModal">
